--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,17 @@ body {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
-input:-webkit-autofill:active{
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     -webkit-box-shadow: 0 0 0 30px black inset !important;
     -webkit-text-fill-color: white !important;
 }
